# breaking-reCAPTCHA

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/solver_logs/: session_20260424_012446.csv  session_20260424_013043.csv  session_20260424_013122.csv  session_20260424_013217.csv  session_20260424_013240.csv  session_20260424_113219.csv  session_20260424_114217.csv  session_20260424_124225.csv  session_20260424_131755.csv
baselines/baseline_ce_seed42/: git_commit.txt  requirements-frozen.txt  training_log.csv
configs/: inference.yaml  training.yaml
scripts/: compare_experiments.py  evaluate.py  predict.py  solve.py  train.py
src/captcha_vision/: __init__.py
src/captcha_vision/common/: __init__.py  device.py
src/captcha_vision/data/: __init__.py  dataset.py
src/captcha_vision/inference/: __init__.py  predictor.py
src/captcha_vision/models/: __init__.py  classifier.py
src/captcha_vision/solver/: __init__.py  browser.py  session.py
src/captcha_vision/training/: __init__.py  evaluate.py  train.py
