[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "captcha-vision"
version = "0.1.0"
description = "PyTorch training and evaluation pipeline for reCAPTCHA tile classification"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "Pillow>=9.0.0",
  "scikit-learn>=1.0.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.12.0",
  "tqdm>=4.64.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

